// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link/Neutral Default - left aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 span.margin-left {
  margin-left: 4px;
}

.c0 span.margin-right {
  margin-right: 4px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  className="c0"
  disabled={false}
  fontWeight="600"
  size={16}
  type="#59636f"
>
  <a
    href="#"
  >
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Neutral disabled 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: default;
  color: rgba(0,0,0,0.32);
}

.c0 span.margin-left {
  margin-left: 4px;
}

.c0 span.margin-right {
  margin-right: 4px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
  disabled={true}
  fontWeight="600"
  size={16}
  type="#59636f"
>
  <span
    href="#"
  >
    Awesome Link
  </span>
</div>
`;

exports[`Storyshots Link/Neutral external 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 span.margin-left {
  margin-left: 4px;
}

.c0 span.margin-right {
  margin-right: 4px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  className="c0"
  disabled={false}
  fontWeight="600"
  size={16}
  type="#59636f"
>
  <a
    href="#"
  >
    Awesome Link
    <span
      className="margin-left"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M23.586 15H15v10h10v-8.586l-4.293 4.293a1 1 0 0 1-1.414-1.414L23.586 15ZM29 11h-5a1 1 0 0 1 0-2h6a1 1 0 0 1 1 1v6a1 1 0 0 1-2 0v-5ZM14 27a1 1 0 0 1-1-1V14a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H14Z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </span>
  </a>
</div>
`;

exports[`Storyshots Link/Neutral right aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 span.margin-left {
  margin-left: 4px;
}

.c0 span.margin-right {
  margin-right: 4px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    fontWeight="600"
    size={16}
    type="#59636f"
  >
    <a
      href="#"
    >
      Awesome Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link/Neutral with left icon 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 span.margin-left {
  margin-left: 4px;
}

.c0 span.margin-right {
  margin-right: 4px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  className="c0"
  disabled={false}
  fontWeight="600"
  size={16}
  type="#59636f"
>
  <a
    href="#"
  >
    <span
      className="margin-right"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.764 34.75a1 1 0 0 1-.661.25h-.206a1 1 0 0 1-.661-.25 12.922 12.922 0 0 1-.418-.391 26.22 26.22 0 0 1-1.048-1.083 32.885 32.885 0 0 1-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 0 1-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391ZM20 33.883l.103-.116V33h-.206v.767l.103.116Zm.756-1.959c1.01-1.1 2.02-2.37 2.962-3.791C26.398 24.093 28 19.673 28 15.02 28 10.283 24.639 7 20.103 7h-.206C15.361 7 12 10.282 12 15.02c0 4.653 1.602 9.073 4.282 13.113a30.898 30.898 0 0 0 2.962 3.791c.268.293.522.557.756.791.234-.234.488-.498.756-.79ZM23 16a3 3 0 1 0-6 0 3 3 0 0 0 6 0Zm2 0a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </span>
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Neutral with right icon 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 span.margin-left {
  margin-left: 4px;
}

.c0 span.margin-right {
  margin-right: 4px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  className="c0"
  disabled={false}
  fontWeight="600"
  size={16}
  type="#59636f"
>
  <a
    href="#"
  >
    Awesome Link
    <span
      className="margin-left"
    >
      <span
        className="c1"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.764 34.75a1 1 0 0 1-.661.25h-.206a1 1 0 0 1-.661-.25 12.922 12.922 0 0 1-.418-.391 26.22 26.22 0 0 1-1.048-1.083 32.885 32.885 0 0 1-3.155-4.038C11.735 24.896 10 20.11 10 15.02 10 9.167 14.266 5 19.897 5h.206C25.733 5 30 9.167 30 15.02c0 5.09-1.734 9.876-4.615 14.218a32.885 32.885 0 0 1-3.155 4.038c-.378.413-.73.774-1.048 1.083-.194.188-.336.32-.418.391ZM20 33.883l.103-.116V33h-.206v.767l.103.116Zm.756-1.959c1.01-1.1 2.02-2.37 2.962-3.791C26.398 24.093 28 19.673 28 15.02 28 10.283 24.639 7 20.103 7h-.206C15.361 7 12 10.282 12 15.02c0 4.653 1.602 9.073 4.282 13.113a30.898 30.898 0 0 0 2.962 3.791c.268.293.522.557.756.791.234-.234.488-.498.756-.79ZM23 16a3 3 0 1 0-6 0 3 3 0 0 0 6 0Zm2 0a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </span>
  </a>
</div>
`;
